force-app/main/default/objects/Account/fields/SFA_Mortgage_Balance__c.field-meta.xml
<CustomField>
    <fullName>SFA_Mortgage_Balance__c</fullName>
    <label>SFA - Mortgage Balance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>