force-app/main/default/objects/Account/fields/SFA_Name_of_second_bank__c.field-meta.xml
<CustomField>
    <fullName>SFA_Name_of_second_bank__c</fullName>
    <label>SFA - Name of second bank</label>
    <length>200</length>
    <type>Text</type>
</CustomField>