force-app/main/default/objects/Account/fields/SFA_Other_Income__c.field-meta.xml
<CustomField>
    <fullName>SFA_Other_Income__c</fullName>
    <label>SFA - Other Income</label>
    <length>20</length>
    <type>Text</type>
</CustomField>