force-app/main/default/objects/Account/fields/SFA_Previous_City__c.field-meta.xml
<CustomField>
    <fullName>SFA_Previous_City__c</fullName>
    <label>SFA - Previous City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>