force-app/main/default/objects/Account/fields/SFA_Salary_Annually_Gross__c.field-meta.xml
<CustomField>
    <fullName>SFA_Salary_Annually_Gross__c</fullName>
    <label>SFA - Salary (Annually Gross)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>