force-app/main/default/objects/Account/fields/SFA_State_Province__c.field-meta.xml
<CustomField>
    <fullName>SFA_State_Province__c</fullName>
    <label>SFA - State/Province</label>
    <length>200</length>
    <type>Text</type>
</CustomField>