force-app/main/default/objects/Account/fields/SFA_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>SFA_Street_Address__c</fullName>
    <label>SFA - Street Address</label>
    <type>TextArea</type>
</CustomField>