force-app/main/default/objects/Account/fields/SFA_Third_Reference_Name__c.field-meta.xml
<CustomField>
    <fullName>SFA_Third_Reference_Name__c</fullName>
    <label>SFA - Third Reference Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>