force-app/main/default/objects/Account/fields/SFA_Type_of_Employment__c.field-meta.xml
<CustomField>
    <fullName>SFA_Type_of_Employment__c</fullName>
    <label>SFA - Type of Employment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>