force-app/main/default/objects/Account/fields/SFA_Years_at_previous_address__c.field-meta.xml
<CustomField>
    <fullName>SFA_Years_at_previous_address__c</fullName>
    <label>SFA - Years at previous address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>