force-app/main/default/objects/Account/fields/SFA_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>SFA_Zip_Postal_Code__c</fullName>
    <label>SFA - Zip/Postal Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>