force-app/main/default/objects/Account/fields/Show_Lead_Desired_Boat_Highest_Price__c.field-meta.xml
<CustomField>
    <fullName>Show_Lead_Desired_Boat_Highest_Price__c</fullName>
    <label>Show Lead - Desired Boat Highest Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>