force-app/main/default/objects/Account/fields/Show_Lead_Desired_Boat_Lowest_Price__c.field-meta.xml
<CustomField>
    <fullName>Show_Lead_Desired_Boat_Lowest_Price__c</fullName>
    <label>Show Lead - Desired Boat Lowest Price</label>
    <length>40</length>
    <type>Text</type>
</CustomField>