force-app/main/default/objects/Account/fields/Show_Lead_Desired_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Show_Lead_Desired_Manufacturer__c</fullName>
    <label>Show Lead - Desired Manufacturer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>