force-app/main/default/objects/Account/fields/Show_Lead_Desired_Model__c.field-meta.xml
<CustomField>
    <fullName>Show_Lead_Desired_Model__c</fullName>
    <label>Show Lead - Desired Model</label>
    <length>200</length>
    <type>Text</type>
</CustomField>