force-app/main/default/objects/Account/fields/Show_Lead_Phone__c.field-meta.xml
<CustomField>
    <fullName>Show_Lead_Phone__c</fullName>
    <label>Show Lead - Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>