force-app/main/default/objects/Account/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>