force-app/main/default/objects/Account/fields/SkiersChoiceLeadUid__c.field-meta.xml
<CustomField>
    <fullName>SkiersChoiceLeadUid__c</fullName>
    <label>SkiersChoiceLeadUid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>