force-app/main/default/objects/Account/fields/SourcePage__c.field-meta.xml
<CustomField>
    <fullName>SourcePage__c</fullName>
    <label>Source Page</label>
    <length>50</length>
    <type>Text</type>
</CustomField>