force-app/main/default/objects/Account/fields/Starboard_engine__c.field-meta.xml
<CustomField>
    <fullName>Starboard_engine__c</fullName>
    <label>Starboard engine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>