force-app/main/default/objects/Account/fields/Stock_Number__c.field-meta.xml
<CustomField>
    <fullName>Stock_Number__c</fullName>
    <label>Stock Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>