force-app/main/default/objects/Account/fields/Sub_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Account_Type__c</fullName>
    <label>Sub Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Through Service</fullName>
            </value>
            <value>
                <fullName>Proshop</fullName>
            </value>
            <value>
                <fullName>Pass The Handle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>