force-app/main/default/objects/Account/fields/Trade_Boat_Engine_SN__c.field-meta.xml
<CustomField>
    <fullName>Trade_Boat_Engine_SN__c</fullName>
    <label>Trade Boat Engine SN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>