force-app/main/default/objects/Account/fields/Trade_Boat_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Trade_Boat_Hrs__c</fullName>
    <label>Trade Boat Hrs</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>