force-app/main/default/objects/Account/fields/Trade_Boat_Trailer_Axles__c.field-meta.xml
<CustomField>
    <fullName>Trade_Boat_Trailer_Axles__c</fullName>
    <label>Trade Boat Trailer Axles</label>
    <length>18</length>
    <type>Text</type>
</CustomField>