force-app/main/default/objects/Account/fields/Trade_Boat_Trailer_VIN__c.field-meta.xml
<CustomField>
    <fullName>Trade_Boat_Trailer_VIN__c</fullName>
    <label>Trade Boat Trailer VIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>