force-app/main/default/objects/Account/fields/Trade_Lien_Bank__c.field-meta.xml
<CustomField>
    <fullName>Trade_Lien_Bank__c</fullName>
    <label>Trade Lien Bank</label>
    <length>40</length>
    <type>Text</type>
</CustomField>