force-app/main/default/objects/Account/fields/Trade_Make__c.field-meta.xml
<CustomField>
    <fullName>Trade_Make__c</fullName>
    <label>Trade Make</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Supra</fullName>
            </value>
            <value>
                <fullName>Moomba</fullName>
            </value>
            <value>
                <fullName>Nautique</fullName>
            </value>
            <value>
                <fullName>Mastercraft</fullName>
            </value>
            <value>
                <fullName>Malibu</fullName>
            </value>
            <value>
                <fullName>Axis</fullName>
            </value>
            <value>
                <fullName>Supreme</fullName>
            </value>
            <value>
                <fullName>Centurion</fullName>
            </value>
            <value>
                <fullName>Sea Ray</fullName>
            </value>
            <value>
                <fullName>Chaparral</fullName>
            </value>
            <value>
                <fullName>Regal</fullName>
            </value>
            <value>
                <fullName>Bayliner</fullName>
            </value>
            <value>
                <fullName>Cobalt</fullName>
            </value>
            <value>
                <fullName>Tahoe</fullName>
            </value>
            <value>
                <fullName>Stingray</fullName>
            </value>
            <value>
                <fullName>Rinker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>