force-app/main/default/objects/Account/fields/Trade_Model__c.field-meta.xml
<CustomField>
    <fullName>Trade_Model__c</fullName>
    <description>Trade in Boat Model</description>
    <label>Trade Model</label>
    <length>20</length>
    <type>Text</type>
</CustomField>