force-app/main/default/objects/Account/fields/Trade_Model_Year__c.field-meta.xml
<CustomField>
    <fullName>Trade_Model_Year__c</fullName>
    <description>Year of the trade boat</description>
    <label>Trade Model Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>