force-app/main/default/objects/Account/fields/Trade_Pay_Off__c.field-meta.xml
<CustomField>
    <fullName>Trade_Pay_Off__c</fullName>
    <description>Amount for customer to pay-off boat</description>
    <label>Trade Pay-Off</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>