force-app/main/default/objects/Account/fields/Trade_Value_Comments_Questions__c.field-meta.xml
<CustomField>
    <fullName>Trade_Value_Comments_Questions__c</fullName>
    <label>Trade Value - Comments/Questions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>