force-app/main/default/objects/Account/fields/Trade_Value_Your_Boat_Engine_Hours__c.field-meta.xml
<CustomField>
    <fullName>Trade_Value_Your_Boat_Engine_Hours__c</fullName>
    <label>Trade Value - Your Boat Engine Hours</label>
    <length>20</length>
    <type>Text</type>
</CustomField>