force-app/main/default/objects/Account/fields/Trade_Value_Your_Boat_Model__c.field-meta.xml
<CustomField>
    <fullName>Trade_Value_Your_Boat_Model__c</fullName>
    <label>Trade Value - Your Boat Model</label>
    <length>200</length>
    <type>Text</type>
</CustomField>