force-app/main/default/objects/Account/fields/Trade_Value_Your_Boat_Year__c.field-meta.xml
<CustomField>
    <fullName>Trade_Value_Your_Boat_Year__c</fullName>
    <label>Trade Value - Your Boat Year</label>
    <type>TextArea</type>
</CustomField>