force-app/main/default/objects/Account/fields/URI__c.field-meta.xml
<CustomField>
    <fullName>URI__c</fullName>
    <label>URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>