force-app/main/default/objects/Account/fields/User_App_Signup_Date__c.field-meta.xml
<CustomField>
    <fullName>User_App_Signup_Date__c</fullName>
    <label>User App Signup Date</label>
    <type>Date</type>
</CustomField>