force-app/main/default/objects/Account/recordTypes/Prospect_Account_Trade.recordType-meta.xml
<RecordType>
    <fullName>Prospect_Account_Trade</fullName>
    <active>true</active>
    <label>Prospect Account Trade</label>
</RecordType>