force-app/main/default/objects/Account/recordTypes/Prospect_Contact_Us.recordType-meta.xml
<RecordType>
    <fullName>Prospect_Contact_Us</fullName>
    <active>true</active>
    <label>Prospect Contact Us</label>
</RecordType>