force-app/main/default/objects/Account/recordTypes/Prospect_Credit_App.recordType-meta.xml
<RecordType>
    <fullName>Prospect_Credit_App</fullName>
    <active>true</active>
    <label>Prospect Credit App</label>
</RecordType>