force-app/main/default/objects/Account/recordTypes/Prospect_Get_A_Quote.recordType-meta.xml
<RecordType>
    <fullName>Prospect_Get_A_Quote</fullName>
    <active>true</active>
    <label>Prospect Get A Quote</label>
</RecordType>