force-app/main/default/objects/Account/recordTypes/Prospect_Lake_Address.recordType-meta.xml
<RecordType>
    <fullName>Prospect_Lake_Address</fullName>
    <active>true</active>
    <label>Prospect Lake Address</label>
</RecordType>