force-app/main/default/objects/Account/recordTypes/Prospect_Parts_Request.recordType-meta.xml
<RecordType>
    <fullName>Prospect_Parts_Request</fullName>
    <active>true</active>
    <label>Prospect Parts Request</label>
</RecordType>