force-app/main/default/objects/Account/recordTypes/Prospect_Schedule_A_Ride.recordType-meta.xml
<RecordType>
    <fullName>Prospect_Schedule_A_Ride</fullName>
    <active>true</active>
    <label>Prospect Schedule A Ride</label>
</RecordType>