force-app/main/default/objects/Account/recordTypes/Prospect_Service_Request.recordType-meta.xml
<RecordType>
    <fullName>Prospect_Service_Request</fullName>
    <active>true</active>
    <label>Prospect Service Request</label>
</RecordType>