force-app/main/default/objects/Account/recordTypes/Prospect_Show_Lead.recordType-meta.xml
<RecordType>
    <fullName>Prospect_Show_Lead</fullName>
    <active>true</active>
    <label>Prospect Show Lead</label>
</RecordType>