force-app/main/default/objects/Account/recordTypes/Prospect_Trade_Request.recordType-meta.xml
<RecordType>
    <fullName>Prospect_Trade_Request</fullName>
    <active>true</active>
    <label>Prospect Trade Request</label>
</RecordType>