force-app/main/default/objects/Account/recordTypes/Referral_Program.recordType-meta.xml
<RecordType>
    <fullName>Referral_Program</fullName>
    <active>true</active>
    <label>Referral Program</label>
</RecordType>