force-app/main/default/objects/Account/validationRules/Prospect_Last_Contact_Date_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Prospect_Last_Contact_Date_Rule</fullName>
    <active>true</active>
    <description>To ensure that Last Contact Date for Prospect Record type must be a future date of Initial Contact Date.</description>
    <errorConditionFormula>Prospect_Initial_Contact_Date__c &gt; Prospect_Last_Contact_Date__c</errorConditionFormula>
    <errorDisplayField>Prospect_Last_Contact_Date__c</errorDisplayField>
    <errorMessage>Last Contact Date must be a future date of Initial Contact Date.</errorMessage>
</ValidationRule>