force-app/main/default/objects/Account/validationRules/Prospect_Next_Contact_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Prospect_Next_Contact_Date_Validation</fullName>
    <active>true</active>
    <description>This rule ensures that Next Contact date must be a future date of Last Contact Date and the Initial Contact Date.</description>
    <errorConditionFormula>( Prospect_Initial_Contact_Date__c &gt;  Prospect_Next_Contact_Date__c )||( Prospect_Last_Contact_Date__c &gt; Prospect_Next_Contact_Date__c)</errorConditionFormula>
    <errorDisplayField>Prospect_Next_Contact_Date__c</errorDisplayField>
    <errorMessage>Next Contact date must be a future date of Last Contact Date and the Initial Contact Date.</errorMessage>
</ValidationRule>