force-app/main/default/objects/Account/listViews/Stage_View.listView-meta.xml
<ListView>
    <fullName>Stage_View</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Lead_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Stage View</label>
</ListView>